stuck bug getUserOrderByKeyword

--- a/telurold/src/styles/style.module.scss
+++ b/telurold/src/styles/style.module.scss
@@ -1526,3 +1526,51 @@
 
 }
 
+.user_orders_container {
+    padding: 19px;
+    border-radius: 5px; 
+    display: flex;
+    flex-direction: column;
+}
+
+.order_component_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.order_card_container {
+    padding: 20px;
+    background-color: var(--background-color);
+    border-radius: 20px;
+}
+
+.user_orders_header {
+    padding: 20px;
+    background-color: var(--background-color);
+    border-radius: 20px;
+    margin-bottom: 20px;
+
+    .search {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        p {
+            @include desc_text();
+            color: var(--p_txt_color);
+        }
+
+        input {
+            width: 17vw;
+            height: 5vh;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: var(--background-color);
+            border-style: solid;
+            color: var(--p_txt_color);
+        }
+    }
+}
+
+
